# wildgrowth

./: .gitignore  Cargo.toml  README.md
.github/workflows/: audit.yml  linter.yml  rust-clippy.yml  rust.yml
api/: Cargo.toml
api/src/: db.rs  lib.rs  main.rs
api/src/cli/: commands.rs  mod.rs
cli/: Cargo.toml
cli/src/: lib.rs
desktop/: Cargo.toml
mobile/: Cargo.toml
server/: Cargo.toml
src/: main.rs
web/: Cargo.toml
wildgrowth_api/: Cargo.toml
wildgrowth_api/src/: db.rs  lib.rs
wildgrowth_api/src/user/: mod.rs
wildgrowth_cli/: Cargo.toml
wildgrowth_cli/src/: actions.rs  arguments.rs  config.rs  debug.rs  main.rs  peers.rs
wildgrowth_server/: Cargo.toml
wildgrowth_server/src/: main.rs
