[workspace]
members = [
	"api",
	"server",
	"web",
	"desktop",
	"mobile"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Caden Lee <CadenCLee@protonmail.com>"]
repository = "github.com/SethranKada/wildgrowth.git"


[workspace.dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
exitcode = "1.1.2"

