[package]
name = "wildgrowth-server"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
api.workspace = true
cli.workspace = true
tokio = "1.28.2"
tokio-util = "0.7.8"
web.workspace = true

[workspace]
members = [
	"api",
	"web",
	"cli"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Caden Lee <CadenCLee@protonmail.com>"]
repository = "github.com/SethranKada/wildgrowth.git"


[workspace.dependencies]
api = {path = "../wildgrowth-server/api"}
cli = {path = "../wildgrowth-server/cli"}
web = {path = "../wildgrowth-server/web"}

