[workspace]
members = [
	"wildgrowth_api",
	"wildgrowth_cli",
	"wildgrowth_server"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Caden Lee <CadenCLee@protonmail.com>"]
repository = "github.com/SethranKada/wildgrowth.git"


[workspace.dependencies]
wildgrowth_api = {path = "../wildgrowth/wildgrowth_api"}
wildgrowth_cli = {path = "../wildgrowth/wildgrowth_cli"}
wildgrowth_web = {path = "../wildgrowth/wildgrowth_web"}
wildgrowth_server = {path = "../wildgrowth/wildgrowth_server"}

directories-next = "2.0.0"
confy = "0.5.1"

