[package]
name = "wildgrowth_api"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["user"]
full = ["net", "data", "net", "user"]
net = []
data = []
user = []

[dependencies]
exitcode = "1.1.2"
serde = { version = "1.0.163", features = ["derive"] }
tokio = "1.28.2"
tokio-util = "0.7.8"
