[package]
name = "wildgrowth_api"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories-next.workspace = true
toml = "0.7.4"
exitcode = "1.1.2"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full", "macros", "rt-multi-thread"] }
tokio-util = "0.7.8"
uuid.workspace = true
